[gd_scene load_steps=4 format=3 uid="uid://d3sp4xpyeljh6"]

[ext_resource type="Script" path="res://scripts/title_screen.gd" id="1_7qm57"]
[ext_resource type="Texture2D" uid="uid://cyq4d3is4crls" path="res://assets/title/title_backdrop.png" id="1_rl4nv"]
[ext_resource type="PackedScene" uid="uid://ddi2i2xbkbxxl" path="res://scenes/game.tscn" id="2_rx0sl"]

[node name="TitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_7qm57")
next_scene = ExtResource("2_rx0sl")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Sprite2D" type="TextureRect" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -960.0
offset_top = -540.0
offset_right = 960.0
offset_bottom = 540.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.00402, 1.00324)
size_flags_horizontal = 4
texture = ExtResource("1_rl4nv")

[node name="TextureRect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.10748, 0.10748, 0.10748, 0.541176)

[node name="VBOXContainer" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -276.0
offset_top = -121.0
offset_right = 276.0
offset_bottom = 121.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 8

[node name="Label" type="Label" parent="CanvasLayer/VBOXContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 100
text = "Synced City"

[node name="PlayButton" type="Button" parent="CanvasLayer/VBOXContainer"]
layout_mode = 2
text = "Play"

[node name="QuitButton" type="Button" parent="CanvasLayer/VBOXContainer"]
layout_mode = 2
text = "Quit
"

[node name="CreditsButton" type="Button" parent="CanvasLayer/VBOXContainer"]
layout_mode = 2
text = "Credits"

[node name="Confirm" type="Label" parent="CanvasLayer/VBOXContainer"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(0.945098, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 16
text = "Press again to confim qutting"
horizontal_alignment = 1

[node name="Label" type="Label" parent="CanvasLayer"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_top = -32.0
offset_right = 114.0
offset_bottom = -9.0
grow_vertical = 0
text = "v.0.0.1-demo"

[node name="Timer" type="Timer" parent="."]
wait_time = 0.75

[connection signal="pressed" from="CanvasLayer/VBOXContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="CanvasLayer/VBOXContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="CanvasLayer/VBOXContainer/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
